# sdf-generator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  readme.md
res/: fBlit.glsl  fEntity.glsl  fFill.glsl  fFont.glsl  fGenOutline.glsl  fGenSDF.glsl  fGround.glsl  vEntity.glsl  vGenSDF.glsl  vGround.glsl
src/: App.cpp  App.hpp  main.cpp  mainLoop.h
src/game/: App.cpp  App.h  entity.cpp  entity.h  game.cpp  game.h
src/gfx/: bufferObject.h  init.cpp  init.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/io/: io.cpp  io.hpp
src/sdf/: sdf.cpp  sdf.h
